src/assets/less/root.less
/* ... */
/* Tablet - 768px */
@media only screen and (min-width: 48rem) {
    #cs-navigation {
        .cs-top-link {
            &:nth-of-type(2) {
                display: flex;
            }
        }
    }
}

/* Dark Mode */
@media only screen and (max-width: 1023px) {
    body.dark-mode {
        #cs-navigation {
            background-color: var(--dark);

            .cs-logo {
                /* makes it white */
                filter: grayscale(1) brightness(1000%);
            }

            .cs-top-container {
                background-color: rgba(0, 0, 0, .2);
            }

            .cs-top-link, .cs-desc {
                color: var(--bodyTextColorWhite);
                opacity: .8;
            }

            .cs-link-icon {
                filter: grayscale(1) brightness(1000%);
            }
            
            .cs-ul-wrapper {
                background-color: var(--medium);
            }

            .cs-li-link, .cs-header {
                color: var(--bodyTextColorWhite);
            }
        }
    }
}

/*-- -------------------------- -->
<---     Navigation Dropdown    -->
<--- -------------------------- -*/ 

/* Mobile - 1023px */
@media only screen and (max-width: 1023px) {
    #cs-navigation {
        .cs-li {
            text-align: center;
            width: 100%;
            display: block;
        }

        .cs-dropdown {
            position: relative;
            color: var(--bodyTextColorWhite);
            &.cs-active {
                .cs-drop-ul {
                    height: auto;
                    opacity: 1;
                    visibility: visible;
                    margin: (12/16rem) 0 0 0;
                    padding: (12/16rem) 0;
                }

                .cs-drop-link {
                    opacity: 1;
                }
            }

            .cs-li-link {
                position: relative;
                transition: opacity .3s;
            }
        }

        .cs-drop-icon {
            width: (15/16rem);
            height: auto;
            position: absolute;
            top: 50%;
            right: (-20/16rem);
            transform: translateY(-50%);
        }

        .cs-drop-ul {
            width: 100%;
            height: 0;
            margin: 0;
            padding: 0;
            background-color: var(--primary);
            overflow: hidden;
            opacity: 0;
            visibility: hidden;
            display: flex;
            justify-content: flex-start;
            flex-direction: column;
            align-items: center;
            gap: (12/16rem);
            transition: padding .3s, margin .3s, height .3s, opacity .3s, visibility .3s;
        }

        .cs-drop-li {
            list-style: none;
        }

        .cs-li-link {
            &.cs-drop-link {
                /* 14px - 16px */
                font-size: clamp(.875rem, 2vw, 1.25rem);
                color: #fff;
            }
        }
    }
}
/* ... */

